included rudimentary RBAC for vassago. Pending addition to Raum (#30)